Archive2/1c/efb9297c215bf2/output
main.cpp:2:1: error: stray '\342' in program
 enum  { ONE = 1 , << 1 = " << ( ull << 1 ) << ' \ n ' << "0x123 << 63 ​​=" << ( ull << 63 ​​) << ' \ n ' // estouro em não assinado << " 0x10 << 10 = " << ( c << 10 ) << ' \ n ' ; // char é promovido para int longo tempo ll = - 1,000 ; std :: cout << std :: dezembro << "-1000 >> 1 = " << ( ll >> ONE ) << ' \ n ' ; }
 ^
main.cpp:2:1: error: stray '\200' in program
main.cpp:2:1: error: stray '\213' in program
main.cpp:2:1: error: stray '\342' in program
main.cpp:2:1: error: stray '\200' in program
main.cpp:2:1: error: stray '\213' in program
main.cpp:2:295: error: missing terminating " character
 enum  { ONE = 1 , << 1 = " << ( ull << 1 ) << ' \ n ' << "0x123 << 63 ​​=" << ( ull << 63 ​​) << ' \ n ' // estouro em não assinado << " 0x10 << 10 = " << ( c << 10 ) << ' \ n ' ; // char é promovido para int longo tempo ll = - 1,000 ; std :: cout << std :: dezembro << "-1000 >> 1 = " << ( ll >> ONE ) << ' \ n ' ; }
                                                                                                                                                                                                                                                                                                       ^
main.cpp:2:1: error: missing terminating " character
 enum  { ONE = 1 , << 1 = " << ( ull << 1 ) << ' \ n ' << "0x123 << 63 ​​=" << ( ull << 63 ​​) << ' \ n ' // estouro em não assinado << " 0x10 << 10 = " << ( c << 10 ) << ' \ n ' ; // char é promovido para int longo tempo ll = - 1,000 ; std :: cout << std :: dezembro << "-1000 >> 1 = " << ( ll >> ONE ) << ' \ n ' ; }
 ^
main.cpp:2:19: error: expected identifier before '<<' token
 enum  { ONE = 1 , << 1 = " << ( ull << 1 ) << ' \ n ' << "0x123 << 63 ​​=" << ( ull << 63 ​​) << ' \ n ' // estouro em não assinado << " 0x10 << 10 = " << ( c << 10 ) << ' \ n ' ; // char é promovido para int longo tempo ll = - 1,000 ; std :: cout << std :: dezembro << "-1000 >> 1 = " << ( ll >> ONE ) << ' \ n ' ; }
                   ^
main.cpp:2:19: error: expected '}' before '<<' token
main.cpp:2:19: error: expected unqualified-id before '<<' token
