Archive2/1c/efb9297c215bf2/main.cpp
#include <iostream> 
enum  { ONE = 1 , << 1 = " << ( ull << 1 ) << ' \ n ' << "0x123 << 63 ​​=" << ( ull << 63 ​​) << ' \ n ' // estouro em não assinado << " 0x10 << 10 = " << ( c << 10 ) << ' \ n ' ; // char é promovido para int longo tempo ll = - 1,000 ; std :: cout << std :: dezembro << "-1000 >> 1 = " << ( ll >> ONE ) << ' \ n ' ; }


        
     
       
           
                     
                       
      
            
